--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,18 @@
   cursor: pointer;
 }
 
+.popup__button_disabled {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  color: rgba(0, 0, 0, 0.2);
+  background-color: transparent;
+  cursor: default;
+}
+
+.popup__button_disabled:hover {
+  background-color: transparent;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
