--- a/src/blocks/popup/__error/popup__error_visible.css
+++ b/src/blocks/popup/__error/popup__error_visible.css
@@ -1,6 +1,6 @@
 .form__input-error {
-	font-size: 12px;
-	color: #FF0000;
+  font-size: 12px;
+  color: #ff0000;
   opacity: 0;
   transition: 0.3s;
 }
