--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -8,13 +8,14 @@
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
 @import url('./__error/popup__error_visible.css');
+@import url('./popup_type_avatar.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
   display: none;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
